--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
+<div class="modal" tabindex="-1" id="modal-risorsa" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+       
+      </div>
+      <div class="modal-body">
+        <div class="spinner-border" role="status">
+          <span class="sr-only"></span>
+        </div>
+      </div>
+     
+    </div>
+  </div>
+</div>
+
 <div class="container-scroller">
   
   <!-- partial:partials/_sidebar.html -->
